--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,19 @@ body, html {
 
 .container {
   margin: 0 auto;
+  padding-top: 150px;
+  padding-bottom: 110px;
   width: 800px;
+}
+
+.header__title {
+  font-size: 32px;
+  font-weight: 700;
+}
+.header__description {
+  margin-top: 13px;
+  font-size: 18px;
+  color: #7f7f7f;
 }
 
 /*# sourceMappingURL=index.css.map */
