--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,4 @@ body, html {
 @import './app';
 @import './components/Header/header';
 @import './components/Form/form';
+@import './components/Input/input';
