--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,63 @@ body, html {
 .form {
   margin-top: 50px;
 }
+.form > *:not(:first-child) {
+  margin-top: 30px;
+}
+.checkbox {
+  position: relative;
+}
+.checkbox__input {
+  -webkit-appearance: none;
+  appearance: none;
+  position: absolute;
+}
+.checkbox__label {
+  padding-left: 40px;
+  color: #7f7f7f;
+  cursor: pointer;
+  transition: color 1s ease-in;
+}
+.checkbox__label::before {
+  margin-top: -5px;
+  content: "";
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #7f7f7f;
+  border-radius: 4px;
+  box-sizing: border-box;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  transition: border 1s ease-in;
+}
+.checkbox__label::after {
+  margin-top: -5px;
+  content: "";
+  display: block;
+  width: 18px;
+  height: 18px;
+  background: url("./assets/checked-checkbox.png") no-repeat;
+  background-size: 18px 18px;
+  opacity: 0;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  z-index: 2;
+  transition: opacity 1s ease-in;
+}
+.checkbox__input:checked + .checkbox__label::before {
+  border: 1px solid #4B72C2;
+}
+.checkbox__input:checked + .checkbox__label {
+  color: #4B72C2;
+}
+.checkbox__input:checked + .checkbox__label::after {
+  opacity: 1;
+}
 
 .input {
   padding: 14px 20px;
