--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,4 @@ body, html {
 @import './components/Header/header';
 @import './components/Form/form';
 @import './components/Input/input';
+@import './components/Checkbox/checkbox';
