button component done

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,3 +14,4 @@ body, html {
 @import './components/Form/form';
 @import './components/Input/input';
 @import './components/Checkbox/checkbox';
+@import './components/Button/button';
