--- a/src/components/Checkbox/_checkbox.scss
+++ b/src/components/Checkbox/_checkbox.scss
@@ -20,7 +20,7 @@
             display: block;
             width: 24px;
             height: 24px;
-            border: 1px solid $gray-color;
+            border: 1px solid #3d3d3d;
 
             border-radius: 4px;
             box-sizing: border-box;
