--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,7 @@ body, html {
   display: block;
   width: 24px;
   height: 24px;
-  border: 1px solid #7f7f7f;
+  border: 1px solid #3d3d3d;
   border-radius: 4px;
   box-sizing: border-box;
   cursor: pointer;
@@ -160,6 +160,14 @@ body, html {
 }
 .checkbox__input:checked + .checkbox__label::after {
   opacity: 1;
+}
+
+.button {
+  padding: 14px 52px;
+  margin-top: 50px !important;
+  background-color: #4B72C2;
+  border: none;
+  color: #FFF;
 }
 
 /*# sourceMappingURL=index.css.map */
