--- a/src/components/Form/_form.scss
+++ b/src/components/Form/_form.scss
@@ -1,5 +1,8 @@
 .form {
-    margin-top: 50px;
+    // margin-top: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-bottom: 2px solid #3d3d3d;
 
     & > *:not(:first-child) {
         margin-top: 30px;
