--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,9 @@ body, html {
 }
 
 .form {
-  margin-top: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  border-bottom: 2px solid #3d3d3d;
 }
 .form > *:not(:first-child) {
   margin-top: 30px;
@@ -167,7 +169,12 @@ body, html {
   margin-top: 50px !important;
   background-color: #4B72C2;
   border: none;
+  border-radius: 4px;
   color: #FFF;
+}
+.button:hover {
+  background-color: rgba(88, 97, 152, 0.5);
+  outline: 1px solid #7f7f7f;
 }
 
 /*# sourceMappingURL=index.css.map */
