--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,4 @@ body, html {
 @import './components/Input/input';
 @import './components/Checkbox/checkbox';
 @import './components/Button/button';
+@import './components/Login/login';
