--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,4 @@ body, html {
 @import './components/Checkbox/checkbox';
 @import './components/Button/button';
 @import './components/Login/login';
+@import './components/GreetingNewUser/greetingNewUser';
