--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,12 @@ body, html {
   margin: 0 auto;
   padding-top: 70px;
   padding-bottom: 70px;
+  position: relative;
   width: 800px;
+}
+
+.active {
+  display: block !important;
 }
 
 .header__title {
@@ -199,6 +204,47 @@ body, html {
 }
 .toLogin__img {
   width: 18px;
+}
+
+.greeting-new-user {
+  position: relative;
+  left: 0;
+  top: 45%;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 800px;
+  font-size: 25px;
+  background-color: rgb(46, 53, 78);
+  text-align: center;
+}
+.greeting-new-user > *:not(:last-child) {
+  margin-bottom: 20px;
+}
+.greeting-new-user__title, .greeting-new-user__subtitle {
+  text-transform: capitalize;
+}
+.greeting-new-user__subtitle {
+  color: burlywood;
+}
+.greeting-new-user .blue-color {
+  color: #4B72C2;
+}
+.greeting-new-user__closeBtn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+}
+
+.greeting-wrapper {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  width: 100%;
+  height: 100%;
+  background-color: #242424;
 }
 
 /*# sourceMappingURL=index.css.map */
