--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -1,12 +1,12 @@
+@import "../../vars";
 .input {
     padding: 14px 20px;
     width: 100%;
     box-sizing: border-box;
-    border: 1px solid #3D3D3D;
+    border: 1px solid #3d3d3d;
     border-radius: 4px;
     background-color: transparent;
     color: #fff;
-
 
     &:focus {
         outline: none;
