--- a/src/index.scss
+++ b/src/index.scss
@@ -9,11 +9,11 @@ body, html {
     font-weight: 400;
 }
 
-@import './app';
-@import './components/Header/header';
-@import './components/Form/form';
-@import './components/Input/input';
-@import './components/Checkbox/checkbox';
-@import './components/Button/button';
-@import './components/Login/login';
-@import './components/GreetingNewUser/greetingNewUser';
+// @import './app';
+// @import './components/Header/header';
+// @import './components/Form/form';
+// @import './components/Input/input';
+// @import './components/Checkbox/checkbox';
+// @import './components/Button/button';
+// @import './components/Login/login';
+// @import './components/GreetingNewUser/greetingNewUser';
