--- a/src/components/Checkbox/checkbox.scss
+++ b/src/components/Checkbox/checkbox.scss
@@ -42,7 +42,7 @@
             width: 18px;
             height: 18px;
 
-            background: url('./assets/checked-checkbox.png') no-repeat;
+            background: url('../../assets/checked-checkbox.png') no-repeat;
             background-size: 18px 18px;
             opacity: 0;
 
