stylyzed home page

--- a/src/components/Button/button.scss
+++ b/src/components/Button/button.scss
@@ -1,4 +1,4 @@
-@import '../../vars';
+@import "../../vars";
 
 .button {
     padding: 14px 52px;
@@ -6,11 +6,10 @@
     background-color: $blue-color;
     border: none;
     border-radius: 4px;
-    color: #FFF;
+    color: #fff;
+    transition: all ease 0.5s;
 
-
-&:hover {
-    background-color: rgba($color: #58619863, $alpha: .5);
-    outline: 1px solid $gray-color;
-}
+    &:hover {
+        background-color: rgba($color: #58619863, $alpha: 0.5);
+    }
 }
