--- a/src/pages/homepage/homepage.scss
+++ b/src/pages/homepage/homepage.scss
@@ -1,15 +1,41 @@
 .homepage {
-    padding-bottom: 30px;
+    padding-bottom: 20px;
     display: flex;
-    column-gap: 50px;
+    column-gap: 100px;
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid gray;
     &__link {
-        color: white;
+        padding: 10px;
+        border: 1px solid transparent;
+        border-radius: 20px;
+        font-size: 20px;
+        color: rgb(204, 204, 204);
+        transition: border ease .5s;
 
         &:hover {
-            text-decoration: underline;
+            border: 1px solid rgb(204, 204, 204);
         }
     }
+}
+
+.user {
+    padding: 25px;
+    border-radius: 30px;
+    border: 1px solid rgba(98, 98, 98, 0.78);
+    & > *:not(:last-child) {
+        margin-bottom: 25px;
+    }
+
+    &__title {
+        font-size: 25px;
+        font-weight: 700;
+    }
+    &__desc {
+        font-size: 22px;
+    }
+    &__data {
+        font-size: 20px;
+    }
+
 }
